--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -23361,4 +23361,8 @@ div:not(.table-compact) > .table .th .dropdown-container .dropdown-list {
   border-width: 0;
 }
 
+.classForEample {
+  color: 0;
+}
+
 /*# sourceMappingURL=theme.compiled.css.map */
